force-app/main/default/objects/Control_Domain__c/Control_Domain__c.object-meta.xml
<CustomObject>
    <label>Control Domain</label>
    <nameField>
        <label>Control Domain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Control Domains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>