force-app/main/default/objects/Control_Domain__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of each Domain Control</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>