force-app/main/default/objects/Control_Domain__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <description>Unique identifier for Control Domains, this will be used as a unique external ID that can be used in relationship mappings.</description>
    <externalId>true</externalId>
    <label>Identifier</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>